--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head id="head">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+	<link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<title>同程旅游_旅游_旅游线路_旅行_出国旅游_自驾游_周边游_旅游网站</title>
 </head>
 <body>
